Prevent text in nav list items from wrapping onto multiple lines (#104411)
Force menu items to stay on one line.

Reviewed-on: https://projects.blender.org/studio/flamenco/pulls/104411

--- a/web/app/src/assets/base.css
+++ b/web/app/src/assets/base.css
@@ -256,6 +256,7 @@ nav > ul {
 nav > ul > li > a {
   display: block;
   padding: var(--spacer-xs) var(--spacer-sm);
+  white-space: nowrap;
 }
 
 h2.column-title {
